# ESP32-PLC

./: .gitignore  CMakeLists.txt  README.md  Tasks.md  platformio.ini  sdkconfig.esp32-s3-devkitc-1-test
certs/: dev_tls_cert.pem  dev_tls_key.pem
certs/iso20/: evse_chain.pem  evse_key.pem  mo_root.pem  v2g_root.pem
docs/: CCS2_DC_Integration_Plan.md  Implementation_Backlog.md  SLAC_Assessment.md
include/: cp_control.h  dc_can.h  diag_auth.h  evse_config.h  ipv6.h  iso15118_dc.h  iso_watchdog.h  main.h  pki_store.h  sdp_server.h  tcp.h  tcp_socket_server.h  tls_credentials.h  tls_server.h
lib/libiso15118/: library.json
lib/libiso15118/include/iso15118/: config.hpp  tbd_controller.hpp
lib/libiso15118/include/iso15118/d20/: config.hpp  control_event.hpp  limits.hpp
lib/libiso15118/include/iso15118/message/: common_types.hpp
lib/libiso15118/include/iso15118/session/: feedback.hpp
lib/libiso15118/src/: tbd_controller.cpp
src/: cp_control.cpp  dc_can.cpp  diag_auth.cpp  ipv6.cpp  iso15118_dc.cpp  iso_watchdog.cpp  lwip_bridge.cpp  lwip_bridge.h  main.cpp  pki_store.cpp  sdp_server.cpp  tcp.cpp  tcp_socket_server.cpp  tls_credentials.cpp  tls_server.cpp
test/gtest_slac_flow/: CMakeLists.txt  iso_flow_test.cpp  slac_flow_test.cpp
test/gtest_slac_flow/stubs/: Arduino.h  SPI.h  arduino_stubs.cpp  esp_system.h  peripheral_stubs.cpp
test/gtest_slac_flow/stubs/freertos/: FreeRTOS.h  task.h
test/test_cbv2g_codec/: test_main.cpp
test/test_diag_iso/: test_main.cpp
